--- a/app/views/roomtypes/_form.html.erb
+++ b/app/views/roomtypes/_form.html.erb
@@ -440,6 +440,7 @@
       <% end %>
     </div>
   <%end%>
+  <%= f.hidden_field :hotel_id, value: current_user.hotel.id%>
   <div class="actions">
     <%= f.submit %>
   </div>
