--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@hotel) do |f| %>
   <% if @hotel.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@hotel.errors.count, "error") %> prohibited this hotel from being saved:</h2>
+    <div>
+      <%= pluralize(@hotel.errors.count, "error") %> prohibited this hotel from being saved:
 
       <ul>
       <% @hotel.errors.full_messages.each do |message| %>
@@ -132,7 +132,7 @@
     <%= f1.check_box :gym,checked: true%>
   <%else%>
     <%= f1.check_box :gym %>
-  <% end %>
+  <%end%>
   </div>
   <div class="field">
   <%= f1.label :spa %>
@@ -194,11 +194,11 @@
     <% end %>
   </div>
   <div class="field">
-    <%= f1.label 'game console nintendro wii' %>
-    <% if @hotel.media[:gameconsolenintendrowii] == '1'%>
-        <%= f1.check_box :gameconsolenintendrowii,checked: true%>
+    <%= f1.label 'game console nintendo wii' %>
+    <% if @hotel.media[:gameconsolenintendowii] == '1'%>
+        <%= f1.check_box :gameconsolenintendowii,checked: true%>
     <%else%>
-      <%= f1.check_box :gameconsolenintendrowii %>
+      <%= f1.check_box :gameconsolenintendowii %>
     <% end %>
   </div>
   <div class="field">
@@ -534,11 +534,11 @@
 <%= f.fields_for :entertainment do |f1|%>
 
   <div class="field">
-    <%= f1.label 'baby safety gates' %>
-    <% if @hotel.entertainment[:babysafetygases] == '1'%>
-      <%= f1.check_box :babysafetygases,checked: true%>
+    <%= f1.label 'baby safety glaasses' %>
+    <% if @hotel.entertainment[:babysafetyglasses] == '1'%>
+      <%= f1.check_box :babysafetyglasses,checked: true%>
     <%else%>
-      <%= f1.check_box :babysafetygases %>
+      <%= f1.check_box :babysafetyglasses %>
     <% end %>
   </div>
   <div class="field">
