--- a/app/views/pricings/_form.html.erb
+++ b/app/views/pricings/_form.html.erb
@@ -1,43 +1,79 @@
-<%= form_for(@pricing) do |f| %>
-  <% if @pricing.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pricing.errors.count, "error") %> prohibited this pricing from being saved:</h2>
 
-      <ul>
-      <% @pricing.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  baseprice for single occupancy:
+  <input type="number" name="base_1" id = 'base_1'><br>
+  baseprice for double occupancy:
+  <input type="number" name="base_2" id = 'base_2'><br>
+  extra adult cost:
+  <input type="number" name="extraadult" id = 'extraadult'><br>
+  extra child cost:
+  <input type="number" name="extrachild" id = 'extrachild'><br>
+  adult breakfast rate:
+  <input type="number" name="adult_breakfast" id = 'adult_breakfast'><br>
+  adult lunch rate:
+  <input type="number" name="adult_lunch" id = 'adult_lunch'><br>
+  adult dinner rate:
+  <input type="number" name="adult_dinner" id = 'adult_dinner'><br>
+  child breakfast rate:
+  <input type="number" name="child_breakfast" id = 'child_breakfast'><br>
+  child lunch rate:
+  <input type="number" name="child_lunch" id = 'child_lunch'><br>
+  child dinner rate:
+  <input type="number" name="child_dinner" id = 'child_dinner'><br>
+  <button id='submit'>submit</button> 
+<script type="text/javascript">
+  $('#submit').click(function(e){
+     e.preventDefault();
 
-  <div class="field">
-    <%= f.label :baseprice %><br>
-    <%= f.text_field :baseprice %>
-  </div>
-  <div class="field">
-    <%= f.label :lunch %><br>
-    <%= f.text_field :lunch %>
-  </div>
-  <div class="field">
-    <%= f.label :dinner %><br>
-    <%= f.text_field :dinner %>
-  </div>
-  <div class="field">
-    <%= f.label :breakfast %><br>
-    <%= f.text_field :breakfast %>
-  </div>
-  <div class="field">
-    <%= f.label :select_food_scheme %><br>
-    <%= f.select :scheme, [['No food','0'],['Only Breakfast','1'],['Only Lunch','2'],['Only Dinner','3'],['Breakfast and Lunch','4'],['Lunch and Dinner','5'],['Breakfast and Dinner','6'],['Breakfast and Lunch and Dinner','7']] %>
-  </div>
-  <div class="field">
-   
-    <%=f.hidden_field :roomtype_id , value:params[:room_id]%>
-    
-  </div>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+    // var priceO = {
+    //   'base_1': document.getElementById('base_1').value,
+    //   'base_2': document.getElementById('base_2').value,
+    //   'extraadult': document.getElementById('extraadult').value,
+    //   'extrachild': document.getElementById('extrachild').value,
+    //   'adult_breakfast': document.getElementById('adult_breakfast').value,
+    //   'adult_lunch': document.getElementById('adult_lunch').value,
+    //   'child_dinner': document.getElementById('adult_dinner').value,
+    //   'child_breakfast': document.getElementById('child_breakfast').value,
+    //   'child_lunch': document.getElementById('child_dinner').value,
+    //   'child_dinner': document.getElementById('child_dinner').value
+    // };
+    // console.log(priceO);
+    $.ajax({
+        url: '/pricings/create',
+        type: 'post',
+        data: {
+              price: {
+                        'base_1': document.getElementById('base_1').value,
+                        'base_2': document.getElementById('base_2').value,
+                        'extraadult': document.getElementById('extraadult').value,
+                        'extrachild': document.getElementById('extrachild').value,
+                        'adult_breakfast': document.getElementById('adult_breakfast').value,
+                        'adult_lunch': document.getElementById('adult_lunch').value,
+                        'child_dinner': document.getElementById('adult_dinner').value,
+                        'child_breakfast': document.getElementById('child_breakfast').value,
+                        'child_lunch': document.getElementById('child_lunch').value,
+                        'child_dinner': document.getElementById('child_dinner').value
+                     },
+                    hotel_id: <%=current_user.hotel.id%>,
+                    roomtype_id: <%=params[:room_id]%>
+              },
+        progress:function(loadTime,status){
+                          console.log(loadTime);
+                         },
+        success: function (result,status,object) {
+                  console.log(result);
+                  console.log(status);
+                  window.location.href = "/roomtypes";
+                 },
+        error:function(result,status) {
+                  alert(result.responseText);
+                  console.log(status);
+                 }
+              
+      });
+  });
+</script>
+
+<!-- 
+
+
+ -->
