--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,10 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
-
+  <%= javascript_include_tag 'hotels'%>
+  <%= javascript_include_tag 'pricings'%>
+  <%= javascript_include_tag 'room_papa'%>
+  <%= javascript_include_tag 'roomtypes'%>
 
 
   
