--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -347,7 +347,7 @@
             <%=f1.check_box:cdplayer,checked: true%>
             
           <%else%>
-            <%=f1.check_box:parking %>            
+            <%=f1.check_box:cdplayer %>            
           <% end %>
         </div>
       </div>
@@ -361,7 +361,7 @@
             <%=f1.check_box:computer,checked: true%>
             
           <%else%>
-            <%=f1.check_box:parking %>            
+            <%=f1.check_box:computer %>            
           <% end %>
         </div>
       </div>
@@ -668,7 +668,7 @@
             <%=f1.check_box:coffeemachine,checked: true%>
             
           <%else%>
-            <%=f1.check_box:coffeemachine,checked: true%>
+            <%=f1.check_box:coffeemachine%>
             
           <% end %>
         </div>
@@ -715,7 +715,7 @@
             <%=f1.check_box:highchair,checked: true%>
             
           <%else%>
-            <%=f1.check_box:highchair,checked: true%>
+            <%=f1.check_box:highchair%>
             
           <% end %>
         </div>
@@ -787,7 +787,7 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" >
   
           <% if @hotel.food[:outdoorfurniture] == '1'%>
-            <%=f1.check_box:outdoorfurniture,checked: true%>
+            <%=f1.check_box:outdoorfurniture%>
             
           <%else%>
             <%=f1.check_box:outdoorfurniture%>
@@ -805,7 +805,7 @@
             <%=f1.check_box:refrigerator,checked: true%>
             
           <%else%>
-            <%=f1.check_box:refrigerator,checked: true%>
+            <%=f1.check_box:refrigerator%>
             
           <% end %>
         </div>
@@ -833,7 +833,7 @@
             <%=f1.check_box:teacoffeemachine,checked: true%>
             
           <%else%>
-            <%=f1.check_box:teacoffeemachine,checked: true%>
+            <%=f1.check_box:teacoffeemachine%>
             
           <% end %>
         </div>
@@ -876,7 +876,7 @@
             <%=f1.check_box:elevator,checked: true%>
             
           <%else%>
-            <%=f1.check_box:elevator,checked: true%>
+            <%=f1.check_box:elevator%>
             
           <% end %>
         </div>
@@ -891,7 +891,7 @@
             <%=f1.check_box:grabrailstoilet,checked: true%>
             
           <%else%>
-            <%=f1.check_box:grabrailstoilet,checked: true%>
+            <%=f1.check_box:grabrailstoilet%>
             
           <% end %>
         </div>
@@ -906,7 +906,7 @@
             <%=f1.check_box:groundfloor,checked: true%>
             
           <%else%>
-            <%=f1.check_box:groundfloor,checked: true%>
+            <%=f1.check_box:groundfloor%>
             
           <% end %>
         </div>
@@ -921,7 +921,7 @@
             <%=f1.check_box:staircaseonly,checked: true%>
             
           <%else%>
-            <%=f1.check_box:staircaseonly,checked: true%>
+            <%=f1.check_box:staircaseonly%>
             
           <% end %>
         </div>
@@ -937,7 +937,7 @@
             <%=f1.check_box:wheelchair,checked: true%>
             
           <%else%>
-            <%=f1.check_box:wheelchair,checked: true%>
+            <%=f1.check_box:wheelchair%>
             
           <% end %>
         </div>
@@ -964,7 +964,7 @@
             <%=f1.check_box:babysafetyglasses,checked: true%>
             
           <%else%>
-            <%=f1.check_box:babysafetyglasses,checked: true%>
+            <%=f1.check_box:babysafetyglasses%>
             
           <% end %>
         </div>
@@ -979,7 +979,7 @@
             <%=f1.check_box:boardgamespuzzles,checked: true%>
             
           <%else%>
-            <%=f1.check_box:boardgamespuzzles,checked: true%>
+            <%=f1.check_box:boardgamespuzzles%>
             
           <% end %>
         </div>
@@ -994,7 +994,7 @@
             <%=f1.check_box:books,checked: true%>
             
           <%else%>
-            <%=f1.check_box:books,checked: true%>
+            <%=f1.check_box:books%>
             
           <% end %>
         </div>
@@ -1008,7 +1008,7 @@
             <%=f1.check_box:safetysockets,checked: true%>
             
           <%else%>
-            <%=f1.check_box:safetysockets,checked: true%>
+            <%=f1.check_box:safetysockets%>
             
           <% end %>
         </div>
