--- a/app/views/hotels/_form1.html.erb
+++ b/app/views/hotels/_form1.html.erb
@@ -341,7 +341,7 @@
             <%=f1.check_box:cdplayer,checked: true%>
             
           <%else%>
-            <%=f1.check_box:parking %>            
+            <%=f1.check_box:cdplayer %>            
           <% end %>
         </div>
       </div>
@@ -355,7 +355,7 @@
             <%=f1.check_box:computer,checked: true%>
             
           <%else%>
-            <%=f1.check_box:parking %>            
+            <%=f1.check_box:computer %>            
           <% end %>
         </div>
       </div>
@@ -662,7 +662,7 @@
             <%=f1.check_box:coffeemachine,checked: true%>
             
           <%else%>
-            <%=f1.check_box:coffeemachine,checked: true%>
+            <%=f1.check_box:coffeemachine%>
             
           <% end %>
         </div>
@@ -709,7 +709,7 @@
             <%=f1.check_box:highchair,checked: true%>
             
           <%else%>
-            <%=f1.check_box:highchair,checked: true%>
+            <%=f1.check_box:highchair%>
             
           <% end %>
         </div>
@@ -799,7 +799,7 @@
             <%=f1.check_box:refrigerator,checked: true%>
             
           <%else%>
-            <%=f1.check_box:refrigerator,checked: true%>
+            <%=f1.check_box:refrigerator%>
             
           <% end %>
         </div>
@@ -827,7 +827,7 @@
             <%=f1.check_box:teacoffeemachine,checked: true%>
             
           <%else%>
-            <%=f1.check_box:teacoffeemachine,checked: true%>
+            <%=f1.check_box:teacoffeemachine%>
             
           <% end %>
         </div>
@@ -870,7 +870,7 @@
             <%=f1.check_box:elevator,checked: true%>
             
           <%else%>
-            <%=f1.check_box:elevator,checked: true%>
+            <%=f1.check_box:elevator%>
             
           <% end %>
         </div>
@@ -885,7 +885,7 @@
             <%=f1.check_box:grabrailstoilet,checked: true%>
             
           <%else%>
-            <%=f1.check_box:grabrailstoilet,checked: true%>
+            <%=f1.check_box:grabrailstoilet%>
             
           <% end %>
         </div>
@@ -900,7 +900,7 @@
             <%=f1.check_box:groundfloor,checked: true%>
             
           <%else%>
-            <%=f1.check_box:groundfloor,checked: true%>
+            <%=f1.check_box:groundfloor%>
             
           <% end %>
         </div>
@@ -915,7 +915,7 @@
             <%=f1.check_box:staircaseonly,checked: true%>
             
           <%else%>
-            <%=f1.check_box:staircaseonly,checked: true%>
+            <%=f1.check_box:staircaseonly%>
             
           <% end %>
         </div>
@@ -931,7 +931,7 @@
             <%=f1.check_box:wheelchair,checked: true%>
             
           <%else%>
-            <%=f1.check_box:wheelchair,checked: true%>
+            <%=f1.check_box:wheelchair%>
             
           <% end %>
         </div>
@@ -958,7 +958,7 @@
             <%=f1.check_box:babysafetyglasses,checked: true%>
             
           <%else%>
-            <%=f1.check_box:babysafetyglasses,checked: true%>
+            <%=f1.check_box:babysafetyglasses%>
             
           <% end %>
         </div>
@@ -973,7 +973,7 @@
             <%=f1.check_box:boardgamespuzzles,checked: true%>
             
           <%else%>
-            <%=f1.check_box:boardgamespuzzles,checked: true%>
+            <%=f1.check_box:boardgamespuzzles%>
             
           <% end %>
         </div>
@@ -988,7 +988,7 @@
             <%=f1.check_box:books,checked: true%>
             
           <%else%>
-            <%=f1.check_box:books,checked: true%>
+            <%=f1.check_box:books%>
             
           <% end %>
         </div>
@@ -1002,7 +1002,7 @@
             <%=f1.check_box:safetysockets,checked: true%>
             
           <%else%>
-            <%=f1.check_box:safetysockets,checked: true%>
+            <%=f1.check_box:safetysockets%>
             
           <% end %>
         </div>
